# python-code-snippets

./: README.md  pyproject.toml
code_snippets/: task_lock.py  time_execution.py
